Added MenuAPI, Basic Regions
Basic Regions coded Cuboid class and few other things stolen from a libraries project

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,10 +1,17 @@
 WELCOME.MESSAGE:
     - "poo"
 
+SELECTOR.NAME: "asdasd"
+
+KIT.SELECTOR.LORE:
+    - "as"
+    - "asd"
+
 SCOREBOARD.TITLE: "&dTest"
 LOBBY.SCOREBOARD.LINES:
     - "---"
     - "%player%"
     - "%kills%"
+    - "%deaths%"
     - "%economy%"
     - "---"
